--- a/assets/app.css
+++ b/assets/app.css
@@ -1037,6 +1037,15 @@ th {
 .mt-auto {
   margin-top: auto;
 }
+.-ml-4 {
+  margin-left: -1rem;
+}
+.-ml-3 {
+  margin-left: -0.75rem;
+}
+.mr-4 {
+  margin-right: 1rem;
+}
 .block {
   display: block;
 }
@@ -1456,6 +1465,17 @@ th {
 }
 .divide-neutral-200\/70 > :not([hidden]) ~ :not([hidden]) {
   border-color: rgb(229 229 229 / 0.7);
+}
+.divide-gray-400 > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-divide-opacity));
+}
+.divide-gray-300 > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-divide-opacity));
+}
+.place-self-end {
+  place-self: end;
 }
 .place-self-center {
   place-self: center;
@@ -2706,6 +2726,12 @@ div[data-block-handle='ig_feed'] {
   }
   .md\:gap-10 {
     gap: 2.5rem;
+  }
+  .md\:place-self-end {
+    place-self: end;
+  }
+  .md\:self-start {
+    align-self: flex-start;
   }
   .md\:\!overflow-visible {
     overflow: visible !important;
