Product color is now not preselected so the slider knows it should change the image when user clicks the first one

--- a/snippets/product-variant-selector.liquid
+++ b/snippets/product-variant-selector.liquid
@@ -94,9 +94,7 @@
                   name="{{ option.name }}"
                   value="{{ value | escape }}"
                   form="{{ product_form_id }}"
-                  class="sr-only peer variant-color-input"
-                  {% if option.selected_value == value %}
-                  checked{% endif %}>
+                  class="sr-only peer variant-color-input">
                 <label
                   x-data
                   x-tooltip.noarrow="{{ value }}"
