Fix margin and padding issues in app.css and product-description.liquid

--- a/sections/product-description.liquid
+++ b/sections/product-description.liquid
@@ -36,7 +36,8 @@
           {% when 'description' %}
             <div>
               {% render 'accordion'
-                , data: product.description, class: "mt-6" %}
+                , data: product.description
+                , class: "mt-6" %}
             </div>
 
           {% when 'variant_selector' %}
