Fix product-pasek-attribute snippet

--- a/sections/product-description.liquid
+++ b/sections/product-description.liquid
@@ -49,7 +49,7 @@
             </div>
 
           {% when 'pasek' %}
-            {% if product.metafields.custom.pasek %}
+            {% if product.metafields.custom.paski %}
               {% render 'product-pasek-attribute' %}
             {% endif %}
 
