Refactor CSS and update banner image position

--- a/assets/app.css
+++ b/assets/app.css
@@ -1708,6 +1708,10 @@ th {
   -o-object-fit: cover;
      object-fit: cover;
 }
+.object-none {
+  -o-object-fit: none;
+     object-fit: none;
+}
 .object-center {
   -o-object-position: center;
      object-position: center;
