--- a/sections/banner-with-text.liquid
+++ b/sections/banner-with-text.liquid
@@ -1,27 +1,33 @@
 <div class="
-relative overflow-hidden flex
+relative
+overflow-hidden
 {{ section.settings.banner_size }}
-{{ section.settings.image_position}}
 {% unless section.settings.full_width %}
   container
 {% endunless %}
 ">
-
-  {% comment %} TODO: Pozycja obrazu, pozycja tekstu, rozmiar tekstu, wysokość {% endcomment %}
   {% comment %} IMAGE {% endcomment %}
   {% if section.settings.image %}
-    <div class="">
-      {{ section.settings.image | img_url: 'master' | img_tag: section.settings.text }}
-    </div>
+    {% comment %} define styles using image position value {% endcomment %}
+    {% assign image_style = 'object-position: 0% ' | append: section.settings.image_position | append: '%' %}
+    {{ section.settings.image | image_url: width: 2000 | image_tag: class: 'cover', style: image_style }}
   {% else %}
     {{ 'lifestyle-1' | placeholder_svg_tag }}
   {% endif %}
 
+
   {% comment %} TEXT {% endcomment %}
   <h1 class="absolute whitespace-nowrap top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-xl font-light uppercase">{{ section.settings.text }}</h1>
 
-
 </div>
+
+<style>
+  img.cover {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
+</style>
 
 {% schema %}
   {
@@ -65,24 +71,14 @@ relative overflow-hidden flex
         ]
       },
       {
-        "type": "select",
+        "type": "range",
         "id": "image_position",
         "label": "Pozycja obrazu",
-        "default": "items-center",
-        "options": [
-          {
-            "value": "items-start",
-            "label": "Góra"
-          },
-          {
-            "value": "items-center",
-            "label": "Środek"
-          },
-          {
-            "value": "items-end",
-            "label": "Dół"
-          }
-        ]
+        "min": 0,
+        "max": 100,
+        "step": 1,
+        "default": 50,
+        "unit": "%"
       }
     ],
     "presets": [
