--- a/sections/banner-with-text.liquid
+++ b/sections/banner-with-text.liquid
@@ -1,23 +1,27 @@
 <div class="
 relative
-overflow-hidden
+flex
+justify-{{ section.settings.text_position }}
+items-center
 {{ section.settings.banner_size }}
 {% unless section.settings.full_width %}
   container
 {% endunless %}
 ">
-  {% comment %} IMAGE {% endcomment %}
-  {% if section.settings.image %}
-    {% comment %} define styles using image position value {% endcomment %}
-    {% assign image_style = 'object-position: 0% ' | append: section.settings.image_position | append: '%' %}
-    {{ section.settings.image | image_url: width: 2000 | image_tag: class: 'cover', style: image_style }}
-  {% else %}
-    {{ 'lifestyle-1' | placeholder_svg_tag }}
-  {% endif %}
+  <div class="absolute w-full h-full overflow-hidden">
+    {% comment %} IMAGE {% endcomment %}
+    {% if section.settings.image %}
+      {% comment %} define styles using image position value {% endcomment %}
+      {% assign image_style = 'object-position: 0% ' | append: section.settings.image_position | append: '%' %}
+      {{ section.settings.image | image_url: width: 2000 | image_tag: class: 'cover', style: image_style }}
+    {% else %}
+      {{ 'lifestyle-1' | placeholder_svg_tag }}
+    {% endif %}
+  </div>
 
 
   {% comment %} TEXT {% endcomment %}
-  <h1 class="absolute whitespace-nowrap top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-xl font-light uppercase">{{ section.settings.text }}</h1>
+  <h1 class="relative font-medium m-10 z-10" style="color: {{ section.settings.text_color }}; font-size: {{ section.settings.text_size}}px">{{ section.settings.text }}</h1>
 
 </div>
 
@@ -37,18 +41,6 @@ overflow-hidden
         "type": "image_picker",
         "id": "image",
         "label": "Obrazek"
-      },
-      {
-        "type": "text",
-        "id": "text",
-        "label": "Tekst",
-        "default": "Baner z tekstem"
-      },
-      {
-        "type": "checkbox",
-        "id": "full_width",
-        "label": "Pełna szerokość",
-        "default": false
       },
       {
         "type": "select",
@@ -71,6 +63,12 @@ overflow-hidden
         ]
       },
       {
+        "type": "checkbox",
+        "id": "full_width",
+        "label": "Pełna szerokość",
+        "default": false
+      },
+      {
         "type": "range",
         "id": "image_position",
         "label": "Pozycja obrazu",
@@ -79,6 +77,48 @@ overflow-hidden
         "step": 1,
         "default": 50,
         "unit": "%"
+      },
+      {
+        "type": "richtext",
+        "id": "text",
+        "label": "Tekst",
+        "default": "<p>Baner z tekstem</p>"
+      },
+      {
+        "type": "select",
+        "id": "text_position",
+        "label": "Pozycja tekstu",
+        "default": "start",
+        "options": [
+          {
+            "value": "start",
+            "label": "Lewo"
+          },
+          {
+            "value": "center",
+            "label": "Środek"
+          },
+          {
+            "value": "end",
+            "label": "Prawo"
+          }
+        ]
+      },
+      {
+        "type": "color",
+        "id": "text_color",
+        "label": "Kolor tekstu",
+        "default": "#cccccc"
+      },
+      {
+        "type": "range",
+        "id": "text_size",
+        "label": "Rozmiar tekstu",
+        "min": 20,
+        "max": 150,
+        "step": 5,
+        "default": 20,
+        "unit": "px"
       }
     ],
     "presets": [
