Update default content in mixed-column section

--- a/sections/mixed-column.liquid
+++ b/sections/mixed-column.liquid
@@ -34,7 +34,7 @@
         "type": "richtext",
         "id": "content",
         "label": "Treść",
-        "default": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum. Quisquam, voluptatum."
+        "default": "<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum. Quisquam, voluptatum.</p>"
       }
     ],
     "presets": [
