--- a/sections/mixed-column.liquid
+++ b/sections/mixed-column.liquid
@@ -1,5 +1,6 @@
 <div class="section container items-center gap-10 grid grid-cols-1 sm:grid-cols-2">
-  <div class="flex flex-col gap-4">
+  {% comment %} Left column {% endcomment %}
+  <div class="flex flex-col gap-4 justify-self-center sm:justify-self-end">
     <h2 class="text-4xl text-primary font-normal">
       {{ section.settings.title }}
     </h2>
@@ -9,8 +10,17 @@
       </p>
     </div>
   </div>
-  <div class="bg-gray-100">
-    {{ 'image' | placeholder_svg_tag }}
+  {% comment %} Right column {% endcomment %}
+  <div class="justify-self-center sm:justify-self-start">
+    {% if section.settings.image %}
+      <div>
+        {{ section.settings.image | image_url: width: 500, height: 500 | image_tag: class: 'cover' }}
+      </div>
+    {% else %}
+      <div class="bg-gray-100">
+        {{ 'image' | placeholder_svg_tag }}
+      </div>
+    {% endif %}
   </div>
 </div>
 
