--- a/src/css/app.css
+++ b/src/css/app.css
@@ -40,6 +40,12 @@
     @apply mt-10;
   }
 
+  .cover {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
+
   .color-theme {
     /* $ SHADOW */
     --shadow-color: 0deg 0% 68%;
