Update mixed-column section settings

--- a/sections/mixed-column.liquid
+++ b/sections/mixed-column.liquid
@@ -61,7 +61,13 @@
     "presets": [
       {
         "name": "Kolumna mieszana",
-        "settings": {}
+        "category": "Kolumny",
+        "settings": {
+          "image": "https://cdn.shopify.com/s/files/1/0509/6331/6893/files/placeholder_500x500.png?v=1633558955",
+          "image_to_left": false,
+          "title": "Tytuł",
+          "content": "<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum. Quisquam, voluptatum.</p>"
+        }
       }
     ]
   }
