--- a/sections/mixed-column.liquid
+++ b/sections/mixed-column.liquid
@@ -60,14 +60,7 @@
     ],
     "presets": [
       {
-        "name": "Kolumna mieszana",
-        "category": "Kolumny",
-        "settings": {
-          "image": "https://cdn.shopify.com/s/files/1/0509/6331/6893/files/placeholder_500x500.png?v=1633558955",
-          "image_to_left": false,
-          "title": "Tytuł",
-          "content": "<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum. Quisquam, voluptatum.</p>"
-        }
+        "name": "Kolumna mieszana"
       }
     ]
   }
