--- a/sections/mixed-column.liquid
+++ b/sections/mixed-column.liquid
@@ -42,7 +42,7 @@
         "type": "checkbox",
         "id": "image_to_left",
         "label": "Obrazek po lewej stronie",
-        "default": "false"
+        "default": false
       },
       {
         "type": "text",
@@ -60,8 +60,16 @@
     ],
     "presets": [
       {
-        "name": "Kolumna mieszana"
+        "name": "Kolumna mieszana",
+        "category": "Kolumny",
+        "settings": {
+          "image_to_left": true,
+          "image": "https://cdn.shopify.com/s/files/1/0509/6331/6893/files/placeholder_500x500.png?v=1632938955",
+          "title": "Tytuł",
+          "content": "<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum. Quisquam, voluptatum.</p>"
+        }
       }
+
     ]
   }
 {% endschema %}
