--- a/sections/mixed-column.liquid
+++ b/sections/mixed-column.liquid
@@ -64,7 +64,7 @@
         "category": "Kolumny",
         "settings": {
           "image_to_left": true,
-          "image": "https://cdn.shopify.com/s/files/1/0509/6331/6893/files/placeholder_500x500.png?v=1632938955",
+          "image": null,
           "title": "Tytuł",
           "content": "<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum. Quisquam, voluptatum.</p>"
         }
