Update margin-top values in app.css and mixed-column.liquid

--- a/sections/mixed-column.liquid
+++ b/sections/mixed-column.liquid
@@ -1,5 +1,5 @@
 <div class="section section-mixed-column container items-center gap-10 grid grid-cols-1 sm:grid-cols-2
-[&>*:nth-child(1)]:sm:justify-self-end [&>*:nth-child(2)]:sm:justify-self-start">
+">
   {% comment %} Left column {% endcomment %}
   <div class="flex flex-col gap-4 justify-self-center max-w-[500px]
   {% if section.settings.image_to_left %}
@@ -63,8 +63,7 @@
         "name": "Kolumna mieszana",
         "category": "Kolumny",
         "settings": {
-          "image_to_left": true,
-          "image": null,
+          "image_to_left": false,
           "title": "Tytuł",
           "content": "<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum. Quisquam, voluptatum.</p>"
         }
