--- a/templates/customers/order.liquid
+++ b/templates/customers/order.liquid
@@ -1,10 +1,10 @@
 <div class="container mx-auto px-4 py-12">
   <div class="flex items-start md:items-end justify-between my-5">
     <div class="w-1/2">
-      <h1 class="text-2xl font-medium">Zamówienie {{ order.name }}</h1>
+      <h1 class="text-2xl font-light">Zamówienie {{ order.name }}</h1>
       <p class="my-2">
         {{ order.created_at | date: format: 'date' }}</p>
-      <span class="text-sm bg-accent text-white rounded-full my-2 px-4 py-1">{{ order.financial_status_label }}</span>
+      <span class="text-sm bg-accent text-white rounded-full whitespace-nowrap uppercase my-2 px-4 py-1">{{ order.financial_status_label }}</span>
     </div>
     <a href="{{ routes.account_url }}" class="link">powrót do konta</a>
   </div>
@@ -13,7 +13,7 @@
     {% for line_item in order.line_items %}
       <div class="w-full border divide-y rounded mb-4">
         <div class="grid grid-cols-1 md:grid-cols-3 lg:gap-4 gap-12 p-4 md:p-12">
-          <div class="w-full h-80 min-h-80 bg-gray-200 rounded-md overflow-hidden border">
+          <div class="w-full h-80 min-h-80 bg-gray-200 rounded-md overflow-hidden">
             {% if line_item.image %}
               {{ line_item.image | image_url: width: 350, height: 350 | image_tag: loading: 'lazy', class: 'w-full h-full object-center object-cover' }}
             {% else %}
@@ -38,24 +38,6 @@
                 </tr>
               </tbody>
             </table>
-
-            <div class="mb-4">
-              {{ line_item.product.description | truncatewords: 15, '...' }}
-            </div>
-          </div>
-
-          <div>
-            <h1 class="font-medium mb-4">Adres dostawy</h1>
-            <div class="mb-4">
-              <!-- {{ order.shipping_address | format_address }} -->
-              <p>Address 1: {{ order.shipping_address.address1 }}</p>
-              <p>Address 2: {{ order.shipping_address.address2 }}</p>
-              <p>Ulica: {{ order.shipping_address.street }}</p>
-              {% comment %} <p>Province: {{ order.shipping_address.province }}</p> {% endcomment %}
-              <p>Miasto: {{ order.shipping_address.city }}</p>
-              <p>Kod pocztowy: {{ order.shipping_address.zip }}</p>
-              <p>Kraj: {{ order.shipping_address.country }}</p>
-            </div>
           </div>
         </div>
         <div class="p-4 md:p-12">
@@ -77,6 +59,17 @@
     {% endfor %}
   </div>
   <div class="w-full grid grid-cols-1 md:grid-cols-3 gap-4 lg:gap-12 border rounded p-4 md:p-12 my-6">
+    <div>
+      <h1 class="font-medium mb-4">Adres dostawy</h1>
+      <div class="mb-4">
+        <!-- {{ order.shipping_address | format_address }} -->
+        <p>{{ order.shipping_address.street }}</p>
+        {% comment %} <p>Province: {{ order.shipping_address.province }}</p> {% endcomment %}
+        <p>{{ order.shipping_address.city }}</p>
+        <p>{{ order.shipping_address.zip }}</p>
+        <p>{{ order.shipping_address.country }}</p>
+      </div>
+    </div>
     <div>
       <h1 class="font-medium mb-4">Adres rozliczeniowy</h1>
       {{ order.billing_address | format_address }}
@@ -123,13 +116,5 @@
       </table>
     </div>
 
-  </div>
-  <div class="py-3 text-right no-print">
-    <button
-      type="submit"
-      onClick="window.print();"
-      class="link">
-      Print
-    </button>
   </div>
 </div>
