--- a/assets/app.css
+++ b/assets/app.css
@@ -1054,6 +1054,9 @@ th {
 .mt-auto {
   margin-top: auto;
 }
+.mr-5 {
+  margin-right: 1.25rem;
+}
 .block {
   display: block;
 }
@@ -1160,8 +1163,18 @@ th {
   height: -moz-max-content;
   height: max-content;
 }
+.h-8 {
+  height: 2rem;
+}
 .max-h-56 {
   max-height: 14rem;
+}
+.max-h-full {
+  max-height: 100%;
+}
+.max-h-fit {
+  max-height: -moz-fit-content;
+  max-height: fit-content;
 }
 .min-h-0 {
   min-height: 0px;
@@ -1225,6 +1238,12 @@ th {
 .w-screen {
   width: 100vw;
 }
+.w-8 {
+  width: 2rem;
+}
+.w-\[100vmin\] {
+  width: 100vmin;
+}
 .min-w-\[250px\] {
   min-width: 250px;
 }
@@ -1267,6 +1286,9 @@ th {
 }
 .max-w-\[900px\] {
   max-width: 900px;
+}
+.max-w-full {
+  max-width: 100%;
 }
 .flex-1 {
   flex: 1 1 0%;
@@ -1388,6 +1410,9 @@ th {
 }
 .flex-col {
   flex-direction: column;
+}
+.flex-col-reverse {
+  flex-direction: column-reverse;
 }
 .flex-wrap {
   flex-wrap: wrap;
@@ -1605,6 +1630,13 @@ th {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
+.border-neutral-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 229 229 / var(--tw-border-opacity));
+}
+.border-transparent {
+  border-color: transparent;
+}
 .bg-\[\#f8f9f4\] {
   --tw-bg-opacity: 1;
   background-color: rgb(248 249 244 / var(--tw-bg-opacity));
@@ -1694,11 +1726,18 @@ th {
 .bg-white\/50 {
   background-color: rgb(255 255 255 / 0.5);
 }
+.bg-neutral-950 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(10 10 10 / var(--tw-bg-opacity));
+}
 .bg-opacity-10 {
   --tw-bg-opacity: 0.1;
 }
 .bg-opacity-80 {
   --tw-bg-opacity: 0.8;
+}
+.bg-opacity-70 {
+  --tw-bg-opacity: 0.7;
 }
 .fill-accent {
   fill: #ec764a;
@@ -1803,6 +1842,10 @@ th {
   padding-top: 1.75rem;
   padding-bottom: 1.75rem;
 }
+.px-7 {
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
+}
 .pb-12 {
   padding-bottom: 3rem;
 }
@@ -1841,6 +1884,9 @@ th {
 }
 .pt-8 {
   padding-top: 2rem;
+}
+.pb-8 {
+  padding-bottom: 2rem;
 }
 .text-left {
   text-align: left;
@@ -2058,6 +2104,10 @@ th {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+.text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
 .underline {
   text-decoration-line: underline;
 }
@@ -2110,6 +2160,11 @@ th {
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -2159,6 +2214,9 @@ th {
 }
 .ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+}
+.ease-in {
+  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 [x-cloak] {
   display: none !important;
@@ -2378,6 +2436,14 @@ div[data-block-handle='ig_feed'] {
   --tw-bg-opacity: 1;
   background-color: rgb(127 29 29 / var(--tw-bg-opacity));
 }
+.hover\:bg-gray-50:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
+.hover\:bg-neutral-900:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(23 23 23 / var(--tw-bg-opacity));
+}
 .hover\:fill-accent:hover {
   fill: #ec764a;
 }
@@ -2400,6 +2466,10 @@ div[data-block-handle='ig_feed'] {
   --tw-text-opacity: 1;
   color: rgb(236 118 74 / var(--tw-text-opacity));
 }
+.hover\:text-gray-800:hover {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
+}
 .hover\:shadow-lg:hover {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -2414,6 +2484,10 @@ div[data-block-handle='ig_feed'] {
   --tw-brightness: brightness(1.1);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
+.focus\:bg-white:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -2426,6 +2500,17 @@ div[data-block-handle='ig_feed'] {
 .focus\:ring-neutral-400:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(163 163 163 / var(--tw-ring-opacity));
+}
+.focus\:ring-neutral-100:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(245 245 245 / var(--tw-ring-opacity));
+}
+.focus\:ring-neutral-200\/60:focus {
+  --tw-ring-color: rgb(229 229 229 / 0.6);
+}
+.focus\:ring-neutral-900:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(23 23 23 / var(--tw-ring-opacity));
 }
 .focus\:ring-offset-2:focus {
   --tw-ring-offset-width: 2px;
@@ -2557,11 +2642,27 @@ div[data-block-handle='ig_feed'] {
   .sm\:max-w-\[1000px\] {
     max-width: 1000px;
   }
+  .sm\:max-w-lg {
+    max-width: 32rem;
+  }
+  .sm\:max-w-2xl {
+    max-width: 42rem;
+  }
   .sm\:flex-1 {
     flex: 1 1 0%;
   }
   .sm\:flex-none {
     flex: none;
+  }
+  .sm\:scale-100 {
+    --tw-scale-x: 1;
+    --tw-scale-y: 1;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+  .sm\:scale-95 {
+    --tw-scale-x: .95;
+    --tw-scale-y: .95;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -2575,8 +2676,14 @@ div[data-block-handle='ig_feed'] {
   .sm\:items-start {
     align-items: flex-start;
   }
+  .sm\:items-center {
+    align-items: center;
+  }
   .sm\:justify-start {
     justify-content: flex-start;
+  }
+  .sm\:justify-end {
+    justify-content: flex-end;
   }
   .sm\:justify-center {
     justify-content: center;
@@ -2587,6 +2694,11 @@ div[data-block-handle='ig_feed'] {
   .sm\:gap-2 {
     gap: 0.5rem;
   }
+  .sm\:space-x-2 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+    margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+  }
   .sm\:self-center {
     align-self: center;
   }
@@ -2595,6 +2707,9 @@ div[data-block-handle='ig_feed'] {
   }
   .sm\:rounded-xl {
     border-radius: 0.75rem;
+  }
+  .sm\:rounded-lg {
+    border-radius: 0.5rem;
   }
   .sm\:border {
     border-width: 1px;
