--- a/sections/kolarz.liquid
+++ b/sections/kolarz.liquid
@@ -1,4 +1,8 @@
-<div class=" container flex flex-col md:flex-row gap-4 my-10" x-data="{
+<div
+  @keydown.escape.window="showModal = false"
+  :class="{ 'z-40': showModal }"
+  class=" container flex flex-col md:flex-row gap-4 my-10"
+  x-data="{
     showModal: false,
     imageSrc: '',
     openModal(imageSrc) {
@@ -10,28 +14,52 @@
     }
   }">
   <!-- Modal overlay (click to close) -->
-  <div
-    x-cloak
-    x-show="showModal"
-    @click="closeModal"
-    x-transition
-    class="fixed inset-0 flex items-center justify-center bg-white bg-opacity-80 z-10">
-    <!-- Modal content -->
-    <div @click.away="closeModal" class="relative bg-white p-6 max-w-3xl rounded-xl shadow-l">
-      <!-- Close button -->
-      <button
-        @click="closeModal"
-        class="absolute top-4 right-4 hover:scale-110 cursor-pointer"
-        aria-label="Close">
-        {% render 'icon-close' %}
-      </button>
-      <!-- Image -->
-      <img
-        x-bind:src="imageSrc"
-        alt="Full size image"
-        class="w-full" />
+  <template x-teleport="body">
+    <div
+      x-show="showModal"
+      class="fixed top-0 left-0 z-[99] flex items-center justify-center w-screen h-screen"
+      x-cloak>
+      <div
+        x-show="showModal"
+        x-transition:enter="ease-out duration-300"
+        x-transition:enter-start="opacity-0"
+        x-transition:enter-end="opacity-100"
+        x-transition:leave="ease-in duration-300"
+        x-transition:leave-start="opacity-100"
+        x-transition:leave-end="opacity-0"
+        @click="showModal=false"
+        class="absolute inset-0 w-full h-full bg-white backdrop-blur-sm bg-opacity-70"></div>
+      <div
+        x-show="showModal"
+        x-trap.inert.noscroll="showModal"
+        x-transition:enter="ease-out duration-300"
+        x-transition:enter-start="opacity-0 -translate-y-2 sm:scale-95"
+        x-transition:enter-end="opacity-100 translate-y-0 sm:scale-100"
+        x-transition:leave="ease-in duration-200"
+        x-transition:leave-start="opacity-100 translate-y-0 sm:scale-100"
+        x-transition:leave-end="opacity-0 -translate-y-2 sm:scale-95"
+        class="relative w-[100vmin] py-6 bg-white border shadow-l px-7 border-neutral-200 sm:max-w-2xl sm:rounded-lg">
+        <div class="flex items-center justify-between pb-3">
+          <button @click="showModal=false" class="absolute top-0 right-0 flex items-center justify-center w-8 h-8 mt-5 mr-5 text-gray-600 rounded-full hover:text-gray-800 hover:bg-gray-50">
+            <svg
+              class="w-5 h-5"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"><path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M6 18L18 6M6 6l12 12" /></svg>
+          </button>
+        </div>
+        <img
+          :src="imageSrc"
+          class="w-full h-auto"
+          alt="Image" />
+      </div>
     </div>
-  </div>
+  </template>
 
 
   <!-- First column with one picture -->
@@ -96,61 +124,50 @@
         "type": "image_picker",
         "label": "Image 2",
         "id": "image_2"
-      },
-      {
+      }, {
         "type": "url",
         "label": "Image 2 Link",
         "id": "image_2_link"
-      },
-      {
+      }, {
         "type": "checkbox",
         "label": "Podgląd zdjęcia po kliknięciu",
         "id": "image_2_zoom",
         "default": false
-      },
-      {
+      }, {
         "type": "image_picker",
         "label": "Image 3",
         "id": "image_3"
-      },
-      {
+      }, {
         "type": "url",
         "label": "Image 3 Link",
         "id": "image_3_link"
-      },
-      {
+      }, {
         "type": "checkbox",
         "label": "Podgląd zdjęcia po kliknięciu",
         "id": "image_3_zoom",
         "default": false
-      },
-      {
+      }, {
         "type": "image_picker",
         "label": "Image 4",
         "id": "image_4"
-      },
-      {
+      }, {
         "type": "url",
         "label": "Image 4 Link",
         "id": "image_4_link"
-      },
-      {
+      }, {
         "type": "checkbox",
         "label": "Podgląd zdjęcia po kliknięciu",
         "id": "image_4_zoom",
         "default": false
-      },
-      {
+      }, {
         "type": "image_picker",
         "label": "Image 5",
         "id": "image_5"
-      },
-      {
+      }, {
         "type": "url",
         "label": "Image 5 Link",
         "id": "image_5_link"
-      },
-      {
+      }, {
         "type": "checkbox",
         "label": "Podgląd zdjęcia po kliknięciu",
         "id": "image_5_zoom",
