Added reveal on scroll to kolarz section

--- a/assets/app.css
+++ b/assets/app.css
@@ -2203,6 +2203,9 @@ th {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
+.delay-1000 {
+  transition-delay: 1000ms;
+}
 .duration-200 {
   transition-duration: 200ms;
 }
