--- a/sections/image-grid.liquid
+++ b/sections/image-grid.liquid
@@ -1,4 +1,8 @@
-<div class="container w-fit mx-auto grid grid-cols-2 sm:grid-cols-3 " style="
+<div
+  x-data
+  x-reveal
+  class="container w-fit mx-auto grid grid-cols-2 sm:grid-cols-3 "
+  style="
 gap: {{ section.settings.gap }}px; 
 margin-top: {{ section.settings.margin_y }}rem; 
 margin-bottom: {{ section.settings.margin_y }}rem;">
