--- a/assets/app.css
+++ b/assets/app.css
@@ -1150,6 +1150,10 @@ th {
 .h-screen {
   height: 100vh;
 }
+.h-max {
+  height: -moz-max-content;
+  height: max-content;
+}
 .max-h-56 {
   max-height: 14rem;
 }
