--- a/assets/app.css
+++ b/assets/app.css
@@ -899,6 +899,15 @@ th {
 .-order-1 {
   order: -1;
 }
+.order-2 {
+  order: 2;
+}
+.order-1 {
+  order: 1;
+}
+.order-4 {
+  order: 4;
+}
 .col-span-2 {
   grid-column: span 2 / span 2;
 }
@@ -1048,6 +1057,18 @@ th {
 .mt-auto {
   margin-top: auto;
 }
+.line-clamp-3 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+}
+.line-clamp-1 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+}
 .block {
   display: block;
 }
@@ -1144,15 +1165,15 @@ th {
 .h-full {
   height: 100%;
 }
+.h-max {
+  height: -moz-max-content;
+  height: max-content;
+}
 .h-px {
   height: 1px;
 }
 .h-screen {
   height: 100vh;
-}
-.h-max {
-  height: -moz-max-content;
-  height: max-content;
 }
 .max-h-56 {
   max-height: 14rem;
@@ -1380,6 +1401,69 @@ th {
 .grid-cols-\[1fr_2fr\] {
   grid-template-columns: 1fr 2fr;
 }
+.grid-cols-\[content-max_1fr\] {
+  grid-template-columns: content-max 1fr;
+}
+.grid-cols-\[max-content_1fr\] {
+  grid-template-columns: max-content 1fr;
+}
+.grid-cols-\[min-max\(max-content_1fr\)_minmax\(max-content_1fr\)\] {
+  grid-template-columns: min-max(max-content 1fr) minmax(max-content 1fr);
+}
+.grid-cols-\[minmax\(max-content_1fr\)_minmax\(max-content_1fr\)\] {
+  grid-template-columns: minmax(max-content 1fr) minmax(max-content 1fr);
+}
+.grid-cols-\[repeat\(4\2c minmax\(fit-content\2c 1fr\)\)\] {
+  grid-template-columns: repeat(4,minmax(fit-content,1fr));
+}
+.grid-cols-\[repeat\(2\2c minmax\(fit-content\2c 1fr\)\)\] {
+  grid-template-columns: repeat(2,minmax(fit-content,1fr));
+}
+.grid-cols-\[repeat\(2_minmax\(fit-content\2c 1fr\)\)\] {
+  grid-template-columns: repeat(2 minmax(fit-content,1fr));
+}
+.grid-cols-\[repeat\(2minmax\(fit-content\2c 1fr\)\)\] {
+  grid-template-columns: repeat(2minmax(fit-content,1fr));
+}
+.grid-cols-\[repeat\(2minmax\(fit-content_1fr\)\)\] {
+  grid-template-columns: repeat(2minmax(fit-content 1fr));
+}
+.grid-cols-\[repeat\(2\2c minmax\(fit-content_1fr\)\)\] {
+  grid-template-columns: repeat(2,minmax(fit-content 1fr));
+}
+.grid-cols-\[repeat\(2_minmax\(fit-content_1fr\)\)\] {
+  grid-template-columns: repeat(2 minmax(fit-content 1fr));
+}
+.grid-cols-\[repeat\(2\2c minmax\(100px\2c 1fr\)\)\] {
+  grid-template-columns: repeat(2,minmax(100px,1fr));
+}
+.grid-cols-\[minmax\(fit-content\)_minmax\(\)\] {
+  grid-template-columns: minmax(fit-content) minmax();
+}
+.grid-cols-\[minmax\(fit-content\2c 1fr\)_minmax\(\)\] {
+  grid-template-columns: minmax(fit-content,1fr) minmax();
+}
+.grid-cols-\[minmax\(100px\2c 1fr\)_minmax\(\)\] {
+  grid-template-columns: minmax(100px,1fr) minmax();
+}
+.grid-cols-\[minmax\(100px\2c 1fr\)_minmax\(100px\2c 1fr\)\] {
+  grid-template-columns: minmax(100px,1fr) minmax(100px,1fr);
+}
+.grid-cols-\[minmax\(100px\2c 1fr\)_minmax\(100px\2c 2fr\)\] {
+  grid-template-columns: minmax(100px,1fr) minmax(100px,2fr);
+}
+.grid-cols-\[minmax\(100px\2c 1fr\)_minmax\(content-fit\2c 2fr\)\] {
+  grid-template-columns: minmax(100px,1fr) minmax(content - fit,2fr);
+}
+.grid-cols-\[minmax\(100px\2c 1fr\)_minmax\(1fr\2c 2fr\)\] {
+  grid-template-columns: minmax(100px,1fr) minmax(1fr,2fr);
+}
+.grid-cols-\[minmax\(100px\2c 1fr\)_minmax\(min-content\2c 2fr\)\] {
+  grid-template-columns: minmax(100px,1fr) minmax(min-content,2fr);
+}
+.grid-cols-\[minmax\(max-content\2c 1fr\)_minmax\(min-content\2c 2fr\)\] {
+  grid-template-columns: minmax(max-content,1fr) minmax(min-content,2fr);
+}
 .flex-row {
   flex-direction: row;
 }
@@ -1451,6 +1535,17 @@ th {
 }
 .gap-\[20px\] {
   gap: 20px;
+}
+.gap-x-4 {
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+}
+.gap-x-2 {
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
+}
+.gap-y-2 {
+  row-gap: 0.5rem;
 }
 .space-x-1 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
@@ -1710,6 +1805,12 @@ th {
 .stroke-current {
   stroke: currentColor;
 }
+.stroke-2 {
+  stroke-width: 2;
+}
+.stroke-1 {
+  stroke-width: 1;
+}
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -1804,6 +1905,14 @@ th {
 .py-7 {
   padding-top: 1.75rem;
   padding-bottom: 1.75rem;
+}
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 .pb-12 {
   padding-bottom: 3rem;
@@ -1951,6 +2060,9 @@ th {
 }
 .tracking-widest {
   letter-spacing: 0.1em;
+}
+.tracking-wide {
+  letter-spacing: 0.025em;
 }
 .text-accent {
   --tw-text-opacity: 1;
@@ -2417,6 +2529,9 @@ div[data-block-handle='ig_feed'] {
   --tw-text-opacity: 1;
   color: rgb(236 118 74 / var(--tw-text-opacity));
 }
+.hover\:decoration-2:hover {
+  text-decoration-thickness: 2px;
+}
 .hover\:shadow-lg:hover {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -2529,8 +2644,26 @@ div[data-block-handle='ig_feed'] {
   .sm\:col-span-2 {
     grid-column: span 2 / span 2;
   }
-  .sm\:m-10 {
-    margin: 2.5rem;
+  .sm\:col-span-1 {
+    grid-column: span 1 / span 1;
+  }
+  .sm\:col-start-1 {
+    grid-column-start: 1;
+  }
+  .sm\:col-start-2 {
+    grid-column-start: 2;
+  }
+  .sm\:col-start-3 {
+    grid-column-start: 3;
+  }
+  .sm\:col-start-4 {
+    grid-column-start: 4;
+  }
+  .sm\:row-start-1 {
+    grid-row-start: 1;
+  }
+  .sm\:row-start-2 {
+    grid-row-start: 2;
   }
   .sm\:mx-0 {
     margin-left: 0px;
@@ -2560,9 +2693,6 @@ div[data-block-handle='ig_feed'] {
   }
   .sm\:w-\[400px\] {
     width: 400px;
-  }
-  .sm\:w-full {
-    width: 100%;
   }
   .sm\:w-max {
     width: -moz-max-content;
@@ -2599,11 +2729,47 @@ div[data-block-handle='ig_feed'] {
   .sm\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
+  .sm\:grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+  .sm\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+  .sm\:grid-cols-\[repeat\(4_minmax\(fit-content\2c 1fr\)\)\] {
+    grid-template-columns: repeat(4 minmax(fit-content,1fr));
+  }
+  .sm\:grid-cols-\[repeat\(4\2c 1fr\)\] {
+    grid-template-columns: repeat(4,1fr);
+  }
+  .sm\:grid-cols-\[minmax\(min-content\2c 1fr\)_repeat\(3\2c 1fr\)\] {
+    grid-template-columns: minmax(min-content,1fr) repeat(3,1fr);
+  }
+  .sm\:grid-cols-\[minmax\(min-content\2c 1fr\)_repeat\(3\2c max-content\)\] {
+    grid-template-columns: minmax(min-content,1fr) repeat(3,max-content);
+  }
+  .sm\:grid-cols-\[minmax\(min-content\2c 1fr\)_repeat\(3\2c minmax\(\(max-content\2c 1fr\)\)\)\] {
+    grid-template-columns: minmax(min-content,1fr) repeat(3,minmax((max-content,1fr)));
+  }
+  .sm\:grid-cols-\[minmax\(min-content\2c 1fr\)_repeat\(3\2c minmax\(\(min-content\2c 1fr\)\)\)\] {
+    grid-template-columns: minmax(min-content,1fr) repeat(3,minmax((min-content,1fr)));
+  }
+  .sm\:grid-cols-\[minmax\(min-content\2c 1fr\)_repeat\(3\2c \.1fr\)\] {
+    grid-template-columns: minmax(min-content,1fr) repeat(3,.1fr);
+  }
+  .sm\:grid-cols-\[minmax\(min-content\2c 1fr\)_repeat\(3\2c \.3fr\)\] {
+    grid-template-columns: minmax(min-content,1fr) repeat(3,.3fr);
+  }
+  .sm\:grid-cols-\[minmax\(min-content\2c 1fr\)_repeat\(3\2c \.4fr\)\] {
+    grid-template-columns: minmax(min-content,1fr) repeat(3,.4fr);
+  }
   .sm\:flex-row {
     flex-direction: row;
   }
   .sm\:items-start {
     align-items: flex-start;
+  }
+  .sm\:items-center {
+    align-items: center;
   }
   .sm\:justify-start {
     justify-content: flex-start;
@@ -2616,6 +2782,26 @@ div[data-block-handle='ig_feed'] {
   }
   .sm\:gap-2 {
     gap: 0.5rem;
+  }
+  .sm\:gap-4 {
+    gap: 1rem;
+  }
+  .sm\:gap-x-2 {
+    -moz-column-gap: 0.5rem;
+         column-gap: 0.5rem;
+  }
+  .sm\:gap-y-4 {
+    row-gap: 1rem;
+  }
+  .sm\:divide-y > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-y-reverse: 0;
+    border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
+    border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
+  }
+  .sm\:divide-x > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-x-reverse: 0;
+    border-right-width: calc(1px * var(--tw-divide-x-reverse));
+    border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
   }
   .sm\:self-center {
     align-self: center;
@@ -2659,6 +2845,10 @@ div[data-block-handle='ig_feed'] {
     padding-top: 1rem;
     padding-bottom: 1rem;
   }
+  .sm\:px-10 {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
   .sm\:pt-\[10vmin\] {
     padding-top: 10vmin;
   }
@@ -2691,9 +2881,6 @@ div[data-block-handle='ig_feed'] {
 @media (min-width: 768px) {
   .md\:bottom-1\/2 {
     bottom: 50%;
-  }
-  .md\:top-\[10vmin\] {
-    top: 10vmin;
   }
   .md\:col-span-1 {
     grid-column: span 1 / span 1;
